[package]
name = "lichess"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess-core = { path = "../core" }
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
console-subscriber = "0.4.1"
eyre = "0.6.12"
fern = { version = "0.7.1", features = ["colored"] }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
hex = "0.4.3"
log = "0.4.25"
rand = "0.9.0"
rayon = "1.10.0"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "tracing"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
